Floppy emulation first version

--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,9 @@ dlldata.c
 # Benchmark Results
 BenchmarkDotNet.Artifacts/
 
+# Development stuff
+devel/
+
 # .NET Core
 project.lock.json
 project.fragment.lock.json
