--- a/TVCEmuCommon/TVCEmuCommon.csproj
+++ b/TVCEmuCommon/TVCEmuCommon.csproj
@@ -32,8 +32,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Windows" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -42,9 +46,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helpers\CRC16.cs" />
+    <Compile Include="Helpers\HashCodeHelper.cs" />
+    <Compile Include="Helpers\SystemPaths.cs" />
+    <Compile Include="Helpers\TinyIoC.cs" />
     <Compile Include="ITVCCard.cs" />
     <Compile Include="ITVComputer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Settings\FrameworkSettingsFile.cs" />
+    <Compile Include="Settings\ISettingsDataProvider.cs" />
+    <Compile Include="Settings\SettingsBase.cs" />
+    <Compile Include="Settings\ISettingsFileBase.cs" />
+    <Compile Include="Settings\SettingsFileBase.cs" />
+    <Compile Include="Settings\WindowPosSettings.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
