--- a/TVCEmuCommon/TVCEmuCommon.csproj
+++ b/TVCEmuCommon/TVCEmuCommon.csproj
@@ -44,14 +44,21 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Helpers\CRC16.cs" />
     <Compile Include="Helpers\HashCodeHelper.cs" />
     <Compile Include="Helpers\SystemPaths.cs" />
     <Compile Include="Helpers\TinyIoC.cs" />
+    <Compile Include="ITVCCartridge.cs" />
     <Compile Include="ITVCCard.cs" />
     <Compile Include="ITVComputer.cs" />
+    <Compile Include="ModuleManager\ModuleBase.cs" />
+    <Compile Include="ModuleManager\ModuleInfo.cs" />
+    <Compile Include="ModuleManager\ModuleManager.cs" />
+    <Compile Include="ModuleManager\ModuleSettingsInfo.cs" />
+    <Compile Include="ModuleManager\ModuleSettingsTreeInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings\FrameworkSettingsFile.cs" />
     <Compile Include="Settings\ISettingsDataProvider.cs" />
@@ -59,7 +66,13 @@
     <Compile Include="Settings\ISettingsFileBase.cs" />
     <Compile Include="Settings\SettingsFileBase.cs" />
     <Compile Include="Settings\WindowPosSettings.cs" />
+    <Compile Include="SetupPage\SetupPageBase.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\CustomControls\CustomControls.csproj">
+      <Project>{80E3ED28-C8AE-4B73-9941-95CCA882470E}</Project>
+      <Name>CustomControls</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
