--- a/TVCEmu.csproj
+++ b/TVCEmu.csproj
@@ -38,10 +38,6 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.DirectX.DirectInput, Version=1.0.2902.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Windows\Microsoft.NET\DirectX for Managed Code\1.0.2902.0\Microsoft.DirectX.DirectInput.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -71,6 +67,9 @@
     <Compile Include="Controls\ExecutionHistoryCollection.cs" />
     <Compile Include="Controls\ExecutionHistoryEntry.cs" />
     <Compile Include="Controls\TVCCartridgeControl.cs" />
+    <Compile Include="Dialogs\AddModuleDialog.xaml.cs">
+      <DependentUpon>AddModuleDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Dialogs\GameBaseBrowser.xaml.cs">
       <DependentUpon>GameBaseBrowser.xaml</DependentUpon>
     </Compile>
@@ -99,7 +98,6 @@
     <Compile Include="Forms\M6845Page.xaml.cs">
       <DependentUpon>M6845Page.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Helpers\Joystick.cs" />
     <Compile Include="Helpers\KeyboardHook.cs" />
     <Compile Include="Models\TVCFiles\BASFile.cs" />
     <Compile Include="Models\TVCFiles\BinaryFileStructHelper.cs" />
@@ -115,10 +113,7 @@
     <Compile Include="Models\TVCFiles\TVCCharacterCodePage.cs" />
     <Compile Include="Models\TVCFiles\TVCFileCRC.cs" />
     <Compile Include="Models\TVCFiles\TVCFiles.cs" />
-    <Compile Include="Models\TVCHardware\DiskDrive.cs" />
-    <Compile Include="Models\TVCHardware\HBFCard.cs" />
     <Compile Include="Models\TVCHardware\TVCCartridge.cs" />
-    <Compile Include="Models\TVCHardware\TVCMultiCart.cs" />
     <Compile Include="Models\TVCHardware\TVComputer.cs" />
     <Compile Include="Models\TVCHardware\TVCInterrupt.cs" />
     <Compile Include="Models\TVCHardware\TVCKeyboard.cs" />
@@ -142,11 +137,16 @@
     <Compile Include="Models\Z80CPU\Z80OpcodesFDCB.cs" />
     <Compile Include="Models\Z80CPU\Z80Registers.cs" />
     <Compile Include="Models\Z80CPU\Z80Tables.cs" />
+    <Compile Include="Settings\CartridgeSettings.cs" />
     <Compile Include="Settings\MainGeneralSettings.cs" />
     <Compile Include="Settings\ModuleInterface.cs" />
     <Compile Include="Settings\SetupDialogSettings.cs" />
     <Compile Include="Settings\SetupInputDataProvider.cs" />
     <Compile Include="Settings\SetupInputSettings.cs" />
+    <Page Include="Dialogs\AddModuleDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Dialogs\GameBaseBrowser.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -192,6 +192,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Forms\M6845Page.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Resources\StringResources.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
