Settings and Expansion management cleaned up

--- a/Expansion/HBF/HBF.csproj
+++ b/Expansion/HBF/HBF.csproj
@@ -57,6 +57,7 @@
       <DependentUpon>SetupInformation.xaml</DependentUpon>
     </Compile>
     <Compile Include="HBFCard.cs" />
+    <Compile Include="HBFCardSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
