--- a/CustomControls/CustomControls.csproj
+++ b/CustomControls/CustomControls.csproj
@@ -48,6 +48,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AnnotatedScrollBar\AnnotatedScrollBar.cs" />
     <Compile Include="AutoCompletetextBox\AutoCompleteTextBox.cs" />
     <Compile Include="CircularProgressbar\CircularProgressBar.xaml.cs">
       <DependentUpon>CircularProgressBar.xaml</DependentUpon>
@@ -86,6 +87,10 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <Page Include="AnnotatedScrollBar\Themes\Generic.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="AutoCompletetextBox\Themes\Generic.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
