--- a/TVCEmuCommon/TVCEmuCommon.csproj
+++ b/TVCEmuCommon/TVCEmuCommon.csproj
@@ -47,6 +47,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Chips\I8251.cs" />
+    <Compile Include="Chips\I8255.cs" />
     <Compile Include="Helpers\CRC16.cs" />
     <Compile Include="Helpers\HashCodeHelper.cs" />
     <Compile Include="Helpers\SystemPaths.cs" />
@@ -54,19 +56,21 @@
     <Compile Include="ITVCCartridge.cs" />
     <Compile Include="ITVCCard.cs" />
     <Compile Include="ITVComputer.cs" />
-    <Compile Include="ModuleManager\ModuleBase.cs" />
-    <Compile Include="ModuleManager\ModuleInfo.cs" />
-    <Compile Include="ModuleManager\ModuleManager.cs" />
-    <Compile Include="ModuleManager\ModuleSettingsInfo.cs" />
-    <Compile Include="ModuleManager\ModuleSettingsTreeInfo.cs" />
+    <Compile Include="ExpansionManager\ExpansionBase.cs" />
+    <Compile Include="ExpansionManager\ExpansionInfo.cs" />
+    <Compile Include="ExpansionManager\ExpansionManager.cs" />
+    <Compile Include="ExpansionManager\ExpansionSetupPageInfo.cs" />
+    <Compile Include="ExpansionManager\ExpansionSetupTreeInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Settings\FrameworkSettingsFile.cs" />
     <Compile Include="Settings\ISettingsDataProvider.cs" />
-    <Compile Include="Settings\SettingsBase.cs" />
-    <Compile Include="Settings\ISettingsFileBase.cs" />
-    <Compile Include="Settings\SettingsFileBase.cs" />
+    <Compile Include="Settings\CardSettingBase.cs" />
+    <Compile Include="Settings\BaseSettings.cs" />
+    <Compile Include="Settings\ModuleBaseSettingsInfo.cs" />
+    <Compile Include="Settings\SettingsFile.cs" />
+    <Compile Include="Settings\SlotSelectionDataProvider.cs" />
     <Compile Include="Settings\WindowPosSettings.cs" />
     <Compile Include="SetupPage\SetupPageBase.cs" />
+    <Compile Include="TVComputerConstants.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CustomControls\CustomControls.csproj">
