--- a/Expansions/HBF/HBF.csproj
+++ b/Expansions/HBF/HBF.csproj
@@ -56,9 +56,10 @@
     <Compile Include="Forms\SetupInformation.xaml.cs">
       <DependentUpon>SetupInformation.xaml</DependentUpon>
     </Compile>
-    <Compile Include="HBFCard.cs" />
     <Compile Include="HBFCardSettings.cs" />
+    <Compile Include="HBFCard.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SetupConfigurationDataProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\CustomControls\CustomControls.csproj">
@@ -88,8 +89,11 @@
       <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Resources\" />
+    <EmbeddedResource Include="Resources\UPM-DISK.ROM" />
+    <EmbeddedResource Include="Resources\VT-DOS11-DISK.ROM" />
+    <EmbeddedResource Include="Resources\VT-DOS12-DISK.ROM" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
