--- a/YATE.csproj
+++ b/YATE.csproj
@@ -62,6 +62,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Controls\AudioControl.cs" />
     <Compile Include="Controls\ExecutionControl.cs" />
     <Compile Include="Controls\ExecutionControlCommand.cs" />
     <Compile Include="Controls\ExecutionHistoryCollection.cs" />
@@ -93,6 +94,8 @@
     </Compile>
     <Compile Include="Drivers\WaveNative.cs" />
     <Compile Include="Drivers\WaveOut.cs" />
+    <None Include="Drivers\WaveOutBuffer.cs" />
+    <None Include="Drivers\WaveOutold.cs" />
     <Compile Include="Effects\CRTFilter.cs" />
     <Compile Include="Forms\ExecutionHistoryPage.xaml.cs">
       <DependentUpon>ExecutionHistoryPage.xaml</DependentUpon>
@@ -251,6 +254,8 @@
     <EmbeddedResource Include="Resources\rom_1_2.bin" />
     <EmbeddedResource Include="Resources\rom_1_2_ru.bin" />
     <EmbeddedResource Include="Resources\rom_2_2.bin" />
+    <EmbeddedResource Include="Resources\ext_2_1.bin" />
+    <EmbeddedResource Include="Resources\rom_2_1.bin" />
     <Resource Include="Effects\CRTFilter.ps" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
