--- a/YATE.csproj
+++ b/YATE.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>YATE</RootNamespace>
     <AssemblyName>YATE</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
@@ -137,6 +137,8 @@
     </Compile>
     <Compile Include="Drivers\WaveNative.cs" />
     <Compile Include="Drivers\WaveOut.cs" />
+    <Compile Include="Settings\TVCJoystick2Settings.cs" />
+    <Compile Include="Settings\TVCJoystick1Settings.cs" />
     <None Include="Drivers\WaveOutBuffer.cs" />
     <None Include="Drivers\WaveOutold.cs" />
     <Compile Include="Effects\CRTFilter.cs" />
