--- a/YATECommon/YATECommon.csproj
+++ b/YATECommon/YATECommon.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>YATECommon</RootNamespace>
     <AssemblyName>YATECommon</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
     <TargetFrameworkProfile />
@@ -51,6 +51,12 @@
     <Compile Include="Chips\I8255.cs" />
     <Compile Include="Chips\SAA1099.cs" />
     <Compile Include="Chips\SN76489.cs" />
+    <Compile Include="Drivers\Joystick.cs" />
+    <Compile Include="Drivers\JoystickNative.cs" />
+    <Compile Include="Drivers\JoystickState.cs" />
+    <Compile Include="Helpers\ROMFile.cs" />
+    <Compile Include="TVCJoystick.cs" />
+    <Compile Include="Drivers\JoystickChannel.cs" />
     <Compile Include="Expansions\ExpansionBase.cs" />
     <Compile Include="Expansions\ExpansionInfo.cs" />
     <Compile Include="Expansions\ExpansionManager.cs" />
@@ -73,6 +79,7 @@
     <Compile Include="Settings\ISettingsDataProvider.cs" />
     <Compile Include="Settings\CardSettingsBase.cs" />
     <Compile Include="Settings\ExpansionSettingBase.cs" />
+    <Compile Include="Settings\JoystickSettings.cs" />
     <Compile Include="Settings\SettingsBase.cs" />
     <Compile Include="Settings\SettingsFile.cs" />
     <Compile Include="Settings\WindowPosSettings.cs" />
