--- a/Expansions/SoundQuartett/SoundQuartett.csproj
+++ b/Expansions/SoundQuartett/SoundQuartett.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F0948A02-8DF0-4C00-8957-5CF81E9F9E3E}</ProjectGuid>
+    <ProjectGuid>{36BD772F-A9A4-4000-909F-00EA6654D991}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MultiCart</RootNamespace>
-    <AssemblyName>MultiCart.expansion</AssemblyName>
+    <RootNamespace>SoundQuartett</RootNamespace>
+    <AssemblyName>SoundQuartett.expansion</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -22,7 +22,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -31,7 +30,6 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="PresentationCore" />
@@ -43,6 +41,7 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
@@ -51,16 +50,13 @@
     <Compile Include="Forms\SetupAbout.xaml.cs">
       <DependentUpon>SetupAbout.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Forms\SetupConfiguration.xaml.cs">
-      <DependentUpon>SetupConfiguration.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Forms\SetupInformation.xaml.cs">
       <DependentUpon>SetupInformation.xaml</DependentUpon>
     </Compile>
-    <Compile Include="MultiCartSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SetupConfigurationDataProvider.cs" />
-    <Compile Include="TVCMultiCart.cs" />
+    <Compile Include="SoundQuartettCard.cs" />
+    <Compile Include="SoundQuartettSettings.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\CustomControls\CustomControls.csproj">
@@ -72,22 +68,19 @@
       <Name>DarkSkin</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\YATECommon\YATECommon.csproj">
-      <Project>{980E3F3E-48C7-4EAD-A731-6A2E1856366E}</Project>
+      <Project>{980e3f3e-48c7-4ead-a731-6a2e1856366e}</Project>
       <Name>YATECommon</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Page Include="Forms\SetupAbout.xaml">
-      <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Forms\SetupConfiguration.xaml">
       <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Forms\SetupInformation.xaml">
-      <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
