--- a/YATE.csproj
+++ b/YATE.csproj
@@ -26,7 +26,7 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>3</ApplicationRevision>
+    <ApplicationRevision>4</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -54,10 +54,10 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>3D0CFE1D31A5BB05E98418D1318524A485282228</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>12AAD08A665FD832BBE3679AF830446257A85C26</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestKeyFile>YATE_TemporaryKey.pfx</ManifestKeyFile>
+    <ManifestKeyFile>YATE_1_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <GenerateManifests>true</GenerateManifests>
@@ -206,6 +206,7 @@
     <Compile Include="Settings\TVCConfigurationSettings.cs" />
     <Compile Include="Settings\SetupInputSettings.cs" />
     <Compile Include="Settings\SetupTVCConfigurationDataProvider.cs" />
+    <None Include="YATE_1_TemporaryKey.pfx" />
     <None Include="YATE_TemporaryKey.pfx" />
     <Page Include="Dialogs\AddExpansionDialog.xaml">
       <SubType>Designer</SubType>
