Debuggable Memory has been added

--- a/Expansions/NanoSD/NanoSD.csproj
+++ b/Expansions/NanoSD/NanoSD.csproj
@@ -91,7 +91,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Resources\NanoSDROM.bin" />
+    <EmbeddedResource Include="Resources\NanoSDROM-v0.33.bin" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
