--- a/Expansions/SDCart/SDCart.csproj
+++ b/Expansions/SDCart/SDCart.csproj
@@ -96,5 +96,9 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\sdcart.bin" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
