--- a/YATE.csproj
+++ b/YATE.csproj
@@ -13,7 +13,7 @@
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <Deterministic>true</Deterministic>
+    <Deterministic>false</Deterministic>
     <TargetFrameworkProfile />
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
@@ -27,7 +27,7 @@
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>11</ApplicationRevision>
-    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <ApplicationVersion>0.1.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
     <BootstrapperEnabled>true</BootstrapperEnabled>
@@ -71,6 +71,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.IO.Compression" />
     <Reference Include="System.IO.Compression.FileSystem" />
@@ -103,6 +104,7 @@
     <Compile Include="Dialogs\AboutDialog.xaml.cs">
       <DependentUpon>AboutDialog.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Emulator\TVCHardware\TVCDebuggableMemory.cs" />
     <Compile Include="Forms\BreakpointSetForm.xaml.cs">
       <DependentUpon>BreakpointSetForm.xaml</DependentUpon>
     </Compile>
@@ -121,9 +123,10 @@
     <Compile Include="Managers\AudioManager.cs" />
     <Compile Include="Managers\BreakpointInfo.cs" />
     <Compile Include="Managers\BreakpointManager.cs" />
+    <Compile Include="Managers\DebugEventType.cs" />
     <Compile Include="Managers\DebugManager.cs" />
     <Compile Include="Managers\ExecutionManager.cs" />
-    <Compile Include="Managers\ExecutionManagerCommand.cs" />
+    <Compile Include="Managers\ManagerCommand.cs" />
     <Compile Include="Managers\ExecutionHistoryCollection.cs" />
     <Compile Include="Managers\ExecutionHistoryEntry.cs" />
     <Compile Include="Managers\IndexedWindowManager.cs" />
