Floppy disk drive image handling has been added

--- a/YATECommon/YATECommon.csproj
+++ b/YATECommon/YATECommon.csproj
@@ -56,14 +56,20 @@
     <Compile Include="Chips\SAA1099.cs" />
     <Compile Include="Chips\SN76489.cs" />
     <Compile Include="Chips\YM2413.cs" />
+    <Compile Include="Disk\FATBootSector.cs" />
+    <Compile Include="Disk\FloppyDiskGeometry.cs" />
+    <Compile Include="Disk\FloppyDiskImage.cs" />
+    <Compile Include="Disk\FloppyDriveGeometry.cs" />
+    <Compile Include="Disk\IVirtualFloppyDisk.cs" />
     <Compile Include="Drivers\Joystick.cs" />
     <Compile Include="Drivers\JoystickNative.cs" />
     <Compile Include="Drivers\JoystickState.cs" />
+    <Compile Include="Helpers\ByteArrayHelper.cs" />
     <Compile Include="Helpers\ItemsControlExtensions.cs" />
     <Compile Include="Helpers\EnumValueDescription.cs" />
     <Compile Include="Helpers\EnumValueExtension.cs" />
     <Compile Include="Helpers\IntegerExpressionEvaluator.cs" />
-    <Compile Include="Helpers\IntergerExpresionEvaluatorException.cs" />
+    <Compile Include="Helpers\IntegerExpresionEvaluatorException.cs" />
     <Compile Include="Helpers\ROMFile.cs" />
     <Compile Include="Helpers\ShortFilename.cs" />
     <Compile Include="IBreakpointManager.cs" />
