--- a/Expansions/HBF/HBF.csproj
+++ b/Expansions/HBF/HBF.csproj
@@ -48,8 +48,20 @@
   <ItemGroup>
     <Compile Include="DiskDrive.cs" />
     <Compile Include="ExpansionMain.cs" />
-    <Compile Include="Forms\DriveDiskSettings.xaml.cs">
-      <DependentUpon>DriveDiskSettings.xaml</DependentUpon>
+    <Compile Include="Forms\SetupDiskDrive4.xaml.cs">
+      <DependentUpon>SetupDiskDrive4.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\SetupDiskDrive3.xaml.cs">
+      <DependentUpon>SetupDiskDrive3.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\SetupDiskDrive2.xaml.cs">
+      <DependentUpon>SetupDiskDrive2.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\SetupDiskDrive1.xaml.cs">
+      <DependentUpon>SetupDiskDrive1.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\SetupDiskDrive.xaml.cs">
+      <DependentUpon>SetupDiskDrive.xaml</DependentUpon>
     </Compile>
     <Compile Include="Forms\SetupAbout.xaml.cs">
       <DependentUpon>SetupAbout.xaml</DependentUpon>
@@ -62,6 +74,7 @@
     </Compile>
     <Compile Include="HBFCardSettings.cs" />
     <Compile Include="HBFCard.cs" />
+    <Compile Include="HBFDriveSettingsBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SetupConfigurationDataProvider.cs" />
   </ItemGroup>
@@ -80,7 +93,23 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Page Include="Forms\DriveDiskSettings.xaml">
+    <Page Include="Forms\SetupDiskDrive4.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Forms\SetupDiskDrive3.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Forms\SetupDiskDrive2.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Forms\SetupDiskDrive1.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Forms\SetupDiskDrive.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
